# VoteSpark

./: .gitignore  README.md  next.config.ts  package.json  tsconfig.json
anchor/: .gitignore  Anchor.toml  tsconfig.json
anchor/programs/vote_spark/: Cargo.toml
anchor/programs/vote_spark/src/: lib.rs
anchor/src/: index.ts  votespark-exports.ts
app/: globals.css  layout.tsx  page.tsx
app/(with-wallet)/: layout.tsx
app/(with-wallet)/active-polls/: page.tsx
app/(with-wallet)/active-polls/ClientActivePolls/: index.tsx
app/(with-wallet)/create/: page.tsx
app/(with-wallet)/create/ClientCreatePoll/: index.tsx
app/(with-wallet)/poll/[creator]/[id]/: page.tsx
app/(with-wallet)/poll/[creator]/[id]/ClientComponent/: index.tsx
lib/components/CreatePollButton/: index.tsx
lib/components/Footer/: index.tsx
lib/components/Loading/: index.tsx
lib/components/Navbar/: index.tsx
lib/components/PhantomWalletButton/: index.tsx
lib/components/PollVoteBreakdown/: index.tsx
lib/components/Providers/: SolanaProvider.tsx
lib/components/WalletConnectionWrapper/: index.tsx
lib/data/: index.ts
lib/data/idl/: poll_idl.json
lib/hooks/: useAnchorProvider.ts  useLoader.ts  usePoll.ts
types/: types.d.ts
